--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ADRIG</title>
-  <meta name="description" content="ADRIG - Digital AI Vision" />
+  <meta name="description" content="ADRIG - Driving growth with AI" />
   <meta name="author" content="ADRIG" />
 
   <!-- Favicon -->
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" type="image/png" href="/favicon.png" />
 
   <meta property="og:title" content="ADRIG" />
-  <meta property="og:description" content="ADRIG - Digital AI Vision" />
+  <meta property="og:description" content="ADRIG - Driving growth with AI" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
