Update SEO meta tags and social previews for better search visibility

--- a/index.html
+++ b/index.html
@@ -4,22 +4,65 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ADRIG</title>
-  <meta name="description" content="ADRIG - Driving growth with AI" />
-  <meta name="author" content="ADRIG" />
+  <title>ADRIG - Driving growth with AI</title>
+  <meta name="description"
+    content="ADRIG AI Technologies is a creative tech company delivering top-tier AI and software solutions across industries. Explore how we innovate!" />
+  <meta name="author" content="ADRIG AI Technologies" />
+  <meta name="keywords"
+    content="AI, artificial intelligence, software development, chatbot, automation, machine learning, technology solutions" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/favicon.png" />
-  <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="/favicon.ico" />
 
-  <meta property="og:title" content="ADRIG" />
-  <meta property="og:description" content="ADRIG - Driving growth with AI" />
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="ADRIG AI Technologies" />
+  <meta property="og:description"
+    content="Driving growth with AI. Tailored software & AI solutions for modern businesses." />
+  <meta property="og:image" content="https://www.adrig.co.in/social-preview.jpg" />
+  <meta property="og:url" content="https://www.adrig.co.in" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:site_name" content="ADRIG AI Technologies" />
+  <meta property="og:locale" content="en_US" />
 
+  <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@lovable_dev" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:title" content="ADRIG AI Technologies" />
+  <meta name="twitter:description"
+    content="Driving growth with AI. Tailored software & AI solutions for modern businesses." />
+  <meta name="twitter:image" content="https://www.adrig.co.in/social-preview.jpg" />
+  <meta name="twitter:site" content="@adrig_ai" />
+
+  <!-- Additional SEO Meta Tags -->
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+  <link rel="canonical" href="https://www.adrig.co.in" />
+
+  <!-- Organization Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "url": "https://www.adrig.co.in",
+    "name": "ADRIG AI Technologies",
+    "logo": "https://www.adrig.co.in/logo.png",
+    "description": "Driving growth with AI. Tailored software & AI solutions for modern businesses.",
+    "foundingDate": "2022",
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "IN"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "contactType": "customer service"
+    },
+    "sameAs": [
+      "https://www.linkedin.com/company/adrig-ai-technologies"
+    ]
+  }
+  </script>
+
   <!-- Manrope font from Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
     rel="stylesheet" />
