--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     content="AI, artificial intelligence, software development, chatbot, automation, machine learning, technology solutions" />
 
   <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="/favicon.ico" />
