--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
   <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
   <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
   <script type="module" src="/src/main.tsx"></script>
+  <!-- Aladdyn AI Chat Widget -->
+<script 
+  src="https://ai-chat-widget-production.up.railway.app/chatbot.min.js?apiKey=70d4e829-dcbf-499b-9f17-7e036a30fda4"
+  async
+  defer
+></script>
 </body>
 
 </html>
